--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "highcharts": "^9.3.3",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
