--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.0",
     "element-ui": "^2.15.6",
     "highcharts": "^9.3.3",
     "normalize.css": "^8.0.1",
@@ -31,6 +32,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
